Plus icon reveals meal input

--- a/todo.txt
+++ b/todo.txt
@@ -4,3 +4,4 @@ TODO:
 - Make sidebar 100% height of everything below header and position below header
 - Dim rest of page when sidebar active
 - Display ingredients on Meal Manager
+- Initial capital on first ingredient only 
