--- a/todo.txt
+++ b/todo.txt
@@ -5,3 +5,4 @@ TODO:
 - Add re-arrange buttons in Meal Manager
 - Collapse meal item text into one column on smaller screens
 - Align h1s to real centre
+- Implement jQuery toggle on add-icon for functionality and animations
