Some progress on dragging

--- a/todo.txt
+++ b/todo.txt
@@ -7,3 +7,7 @@ TODO:
 - Reverse order of meals array so that most recently added or edited is displayed first
 -Replace numbers on index with something more fun and visually appealing; wheel of fortune?
 - Apply sequential fade in to generated meals on index
+- Produce shopping list
+
+MAYBE:
+- Webscrape ingredients prices
