Tweaks - working version

--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,9 @@
 TODO:
+- Fade in shopping list title once numBtn is pressed
 - Make meal text editable in place on MM
     - Manual save needs to work by index; first meal data is being saved in every case
 - Add fade in animations to most things
-- Add re-arrange buttons in Meal Manager
+- Make page remember re-arranged order of meal items
 - Collapse meal item text into one column on smaller screens
 - Reverse order of meals array so that most recently added or edited is displayed first
 -Replace numbers on index with something more fun and visually appealing; wheel of fortune?
