--- a/todo.txt
+++ b/todo.txt
@@ -1,13 +1,13 @@
 TODO:
 - Make meal text editable in place on MM
     - Manual save needs to work by index; first meal data is being saved in every case
-- Add fade in animations to most things
-- Add re-arrange buttons in Meal Manager
-- Collapse meal item text into one column on smaller screens
+- Use something to implement draggability in mealItems
+- Fine-tune media query widths
 - Reverse order of meals array so that most recently added or edited is displayed first
 -Replace numbers on index with something more fun and visually appealing; wheel of fortune?
 - Apply sequential fade in to generated meals on index
 - Produce shopping list
+- Create a 'tutorial' if no content is displayed on page or if no saved data
 
 MAYBE:
 - Webscrape ingredients prices
