--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,8 @@
 TODO:
-- Make page remember re-arranged order of meal items
+- Add alphabetical sort option to Meal Manager
 - Produce shopping list
 - Create a 'tutorial' if no content is displayed on page or if no saved data
 - Add 'click off' function to close meal input container
-- Order meals in Meal Manager alphabetically
 - Turn meals on index into cards to make more distinguishable from each other
 
 MAYBE:
